# aacas

./: ..gitignore.swp  .gitignore  .gitmodules  README.md  alba.py  build.sh  test.pu
SDK/Onboard-SDK/: CMakeLists.txt
aacas/: CMakeLists.txt  package.xml
aacas/scripts/: pyNode.py
aacas/src/: pyNode.py
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/realsense2_camera/: Extrinsics.h
catkin_ws/devel/lib/ddynamic_reconfigure/: fake_dynamic_reconfigure_server  test_bool_dynamic_reconfigure_server
catkin_ws/devel/lib/pkgconfig/: ddynamic_reconfigure.pc  realsense2_camera.pc  realsense2_description.pc
catkin_ws/devel/share/ddynamic_reconfigure/cmake/: ddynamic_reconfigureConfig.cmake
catkin_ws/devel/share/realsense2_camera/cmake/: realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
catkin_ws/devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
catkin_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/install/include/lidar_process/: tracked_obj.h  tracked_obj_arr.h
catkin_ws/install/include/realsense2_camera/: IMUInfo.h
catkin_ws/install/include/velodyne_pointcloud/: TransformNodeConfig.h
catkin_ws/install/include/yolov3_sort/: BoundingBox.h  BoundingBoxes.h
catkin_ws/install/lib/pkgconfig/: ddynamic_reconfigure.pc  example_code.pc  lidar_process.pc  realsense2_camera.pc  realsense2_description.pc  velodyne_driver.pc  velodyne_laserscan.pc  velodyne_msgs.pc  velodyne_pointcloud.pc  yolov3_sort.pc
catkin_ws/install/lib/velodyne_driver/: velodyne_node
catkin_ws/install/lib/velodyne_laserscan/: velodyne_laserscan_node
catkin_ws/install/lib/velodyne_pointcloud/: cloud_node  transform_node
catkin_ws/install/share/ddynamic_reconfigure/cmake/: ddynamic_reconfigureConfig.cmake
catkin_ws/install/share/example_code/cmake/: example_codeConfig.cmake
catkin_ws/install/share/lidar_process/cmake/: lidar_process-msg-extras.cmake  lidar_process-msg-paths.cmake  lidar_processConfig.cmake
catkin_ws/install/share/realsense2_camera/cmake/: realsense2_cameraConfig.cmake
catkin_ws/install/share/yolov3_sort/: package.xml
catkin_ws/install/share/yolov3_sort/cmake/: yolov3_sort-msg-extras.cmake  yolov3_sort-msg-paths.cmake  yolov3_sortConfig.cmake
catkin_ws/src/: README.md  aacas.launch
catkin_ws/src/aacas/: CMakeLists.txt  package.xml
catkin_ws/src/aacas/launch/: .aacas.launch.swp  aacas.launch  lidar_pred.launch  live_flight.launch  manual_flight.launch  sim_flight.launch
catkin_ws/src/aacas/src/: aacas_safety_checks.py  local_position_service.py
catkin_ws/src/aacas_detection/: CMakeLists.txt  package.xml
catkin_ws/src/aacas_detection/config/: moving_obstacle_params.yaml  multi_obstacle_params.yaml  obstacle_params.yaml
catkin_ws/src/aacas_detection/src/: object_detections.py
catkin_ws/src/aacas_detection/srv/: QueryDetections.srv
catkin_ws/src/aacas_display/: CMakeLists.txt  package.xml
catkin_ws/src/aacas_display/launch/: live_flight.launch  test_path.launch
catkin_ws/src/aacas_display/src/: above.rviz  behind.rviz  display.py  flightPathPrediction.py
catkin_ws/src/aacas_motion/: CMakeLists.txt  package.xml
catkin_ws/src/aacas_motion/config/: live_flight_params.yaml  safety_params.yaml  vector_field_planner_params.yaml
catkin_ws/src/aacas_motion/launch/: live_flight.launch
catkin_ws/src/aacas_motion/src/: Safety_Test_Readme.txt  djiTest.py  dji_pilot.py  sim_pilot.py  vectFieldController.py  vectFieldController_multiObject.py  vectFieldPath.py  vectMulti.py
catkin_ws/src/aacas_simulation/aacas_simulation/: CMakeLists.txt  package.xml
catkin_ws/src/dji_m600_sim/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/dji_m600_sim/config/: dji_sdk_sim_params.yaml
catkin_ws/src/dji_m600_sim/launch/: display.launch  moving_obstacle.launch  multi_obstacle.launch  simulation.launch
catkin_ws/src/dji_m600_sim/models/collision_sphere/: model.sdf
catkin_ws/src/dji_m600_sim/models/kickball/: model.config  model.sdf
catkin_ws/src/dji_m600_sim/rviz/: urdf.rviz
catkin_ws/src/dji_m600_sim/src/: dji_sdk_sim.py  obstacle_visualize_python.py  rviz_collision_publisher.cpp  rviz_collision_publisher_no_gazebo.cpp  tf_broadcaster.cpp
catkin_ws/src/dji_m600_sim/urdf/: gazebo.xacro  geometries.xacro  inertial.xacro  joints.xacro  kickball.urdf  links.xacro  m600_pro.xacro  materials.xacro  properties.xacro
catkin_ws/src/dji_m600_sim/worlds/: sphere_collision.world  sphere_single.world
catkin_ws/src/example_code/config/: example_params.yaml
catkin_ws/src/example_code/include/: cppExample.h
catkin_ws/src/lidar_process/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
catkin_ws/src/lidar_process/launch/: launch_lidar_process.launch
catkin_ws/src/lidar_process/msg/: tracked_obj.msg  tracked_obj_arr.msg
catkin_ws/src/lidar_process/src/: get_depth.cpp  lidar_process.cpp
catkin_ws/src/rviz_python_tutorial/: config.myviz  config.rviz  myviz.py
catkin_ws/src/scripts/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
catkin_ws/src/scripts/src/: get_depth.cpp
catkin_ws/src/traj_prediction/: CMakeLists.txt  package.xml
catkin_ws/src/traj_prediction/launch/: launch_traj_prediction.launch
catkin_ws/src/traj_prediction/msg/: tracked_obj.msg  tracked_obj_arr.msg
catkin_ws/src/traj_prediction/src/: tf_broadcaster.cpp  traj_prediction.cpp
catkin_ws/src/yolov3_pytorch_ros/launch/: detector-tiny.launch  detector.launch
catkin_ws/src/yolov3_pytorch_ros/src/: detector.py  models.py
catkin_ws/src/yolov3_sort/: CMakeLists.txt  LICENSE  requirements.txt
catkin_ws/src/yolov3_sort/config/: custom.names  yolov3-tiny-custom.cfg
catkin_ws/src/yolov3_sort/launch/: offline.launch  tracker.launch
catkin_ws/src/yolov3_sort/msg/: BoundingBox.msg
catkin_ws/src/yolov3_sort/src/: detector.py  sort.py  tracker.py
example_code/: CMakeLists.txt  package.xml
example_code/include/: cppExample.h
example_code/launch/: example.launch
example_code/scripts/: pyNode.py
example_code/src/: cppNode.cpp
rosbags/: export.launch
(+51 files in other folders)
