<?xml version="1.0"?>
<package>
  <name>aacas_display</name>
  <version>0.0.0</version>
  <description>The aacas_display package</description>

  <maintainer email="eichmeierbr@todo.todo">eichmeierbr</maintainer>

  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
