<?xml version="1.0"?>
<package format="2">
  <name>yolov3_sort</name>
  <version>0.1.0</version>
  <description>SORT Tracker wrapper package</description>

  <maintainer email="szuyul@andrew.cmu.edu">Szuyu Angela Lin</maintainer>
  <maintainer email="sryer@andrew.cmu.edu">Shaun Ryer</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
