<?xml version="1.0"?>
<package format="2">
  <name>aacas_simulation</name>
  <version>1.0.0</version>
  <description>The aacas_simulation metapackage</description>

  <maintainer email="beichmei@andrew.cmu.edu">eichmeierbr</maintainer>
  <license>TODO</license>


  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>dji_m100_controllers_gazebo</exec_depend>
  <exec_depend>dji_m100_description</exec_depend>
  <exec_depend>dji_m100_gazebo</exec_depend>
  <exec_depend>hector_localization</exec_depend>
  <exec_depend>hector_quadrotor</exec_depend>
  <exec_depend>Hector-Quadrotor-Aggressive-Flight</exec_depend>


  <export>
	<metapackage/>
  </export>
</package>

